--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Github Profiles</title>
   </head>
   <body>
+    <h1>Search Github Profile</h1>
+    <br>
+    <br>
     <form class="user-form" id="form">
       <input type="text" id="search" placeholder="Search a Github User">
     </form>
